fix navigation--nojs and best-block

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <div class="page-header__logo  logo">
         <a class="logo__link" href="#">Gustoso</a>
       </div>
-      <nav class="page-header__navigation  navigation  navigation--opened">
+      <nav class="page-header__navigation  navigation  navigation--opened  navigation--nojs">
         <div class="navigation__wrapper">
           <button class="navigation__toggle  navigation__toggle--opened" type="button">Открыть меню</button>
           <ul class="navigation__list">
