--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="css/style.css">
+  <script src="js/picturefill.min.js"></script>
   <title>Gustoso</title>
 </head>
 <body>
@@ -19,7 +20,7 @@
           <button class="navigation__toggle  navigation__toggle--opened" type="button">Открыть меню</button>
           <ul class="navigation__list">
             <li class="navigation__item">
-              <a class="navigation__link" href="index.html">welcome</a>
+              <a class="navigation__link" href="#">welcome</a>
             </li>
             <li class="navigation__item">
               <a class="navigation__link" href="#">menu</a>
@@ -99,11 +100,12 @@
   <section class="page-main__dishes  dishes">
     <h2 class="dishes__title visually-hidden">Our dishes</h2>
     <div class="dishes__wrapper">
-      <section class="dishes__item  ">
+      <section class="dishes__item">
         <picture>
           <source media="(min-width: 1260px)" srcset = "img/menu-desktop.png">
           <source media="(min-width: 960px)" srcset = "img/menu-desktop-small.png">
-          <img class="dishes__image" src="img/menu.png" width="585" height="512" alt="">
+          <source media="(min-width: 768px)" srcset = "img/menu_x2.png">
+          <img class="dishes__image" src="img/menu_x1.png"  alt="">
         </picture>
         <div class="dishes__stars">4</div>
         <div class="dishes__description">
@@ -118,7 +120,12 @@
         </div>
       </section>
       <section class="dishes__item  dishes__item--hidden">
-        <img class="dishes__image" src="img/menu-1.png" width="585" height="512" alt="">
+        <picture>
+          <source media="(min-width: 1260px)" srcset = "img/menu-1-desktop.png">
+          <source media="(min-width: 960px)" srcset = "img/menu-1-desktop-small.png">
+            <source media="(min-width: 768px)" srcset = "img/menu-1_x2.png">
+          <img class="dishes__image" src="img/menu-1_x1.png"  alt="">
+        </picture>
         <div class="dishes__description">
           <h3 class="dishes__title">Salami sandwich</h3>
           <b class="dishes__subtitle">the most popular</b>
@@ -131,7 +138,12 @@
         </div>
       </section>
       <section class="dishes__item  dishes__item--hidden">
-        <img class="dishes__image" src="img/menu-2.png" width="585" height="512" alt="">
+        <picture>
+          <source media="(min-width: 1260px)" srcset = "img/menu-2-desktop.png">
+          <source media="(min-width: 960px)" srcset = "img/menu-2-desktop-small.png">
+            <source media="(min-width: 768px)" srcset = "img/menu-2_x2.png">
+          <img class="dishes__image" src="img/menu-2_x1.png"  alt="">
+        </picture>
         <div class="dishes__description">
           <h3 class="dishes__title">Berry dessert</h3>
           <b class="dishes__subtitle">summer choice</b>
@@ -144,7 +156,12 @@
         </div>
       </section>
       <section class="dishes__item  dishes__item--hidden">
-        <img class="dishes__image" src="img/menu-3.png" width="585" height="512" alt="">
+        <picture>
+          <source media="(min-width: 1260px)" srcset = "img/menu-3-desktop.png">
+          <source media="(min-width: 960px)" srcset = "img/menu-3-desktop-small.png">
+            <source media="(min-width: 768px)" srcset = "img/menu-3_x2.png">
+          <img class="dishes__image" src="img/menu-3_x1.png"  alt="">
+        </picture>
         <div class="dishes__description">
           <h3 class="dishes__title">Fresh salad</h3>
           <b class="dishes__subtitle">the most useful</b>
@@ -216,7 +233,7 @@
             </div>
             <h3 class="book__title">Your morning Escape with Flair</h3>
             <p class="book__description">Donec vitae sapien ut libero venenatis faucibus. Nullam quis ante. Etiam sit amet orci eget eros faucibus tincidunt. Duis leo.</p>
-            <a class="book__link button" href="#">read</a>
+            <a href="#" class="book__link button" >read</a>
           </div>
         </div>
         <div class="book__wrapper  book__wrapper--2">
