--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="css/style.css">
   <script src="js/picturefill.min.js"></script>
+  <link rel="icon" type="image/png" href="img/favicon.png"/>
   <title>Gustoso</title>
 </head>
 <body>
