--- a/index.html
+++ b/index.html
@@ -73,7 +73,10 @@
           <h3 class="quote__title">Chef Cook</h3>
           <div class="quote__author">
             <cite class="quote__author-name">Benito</cite>
-            <img class="quote__author-photo" src="img/portrait.png" alt="portrait" width="100" height="100">
+            <picture>
+              <source type="image/webp" srcset="img/portrait.webp">
+              <img class="quote__author-photo" src="img/portrait.png" alt="portrait" width="100" height="100">
+            </picture>
             <cite class="quote__author-name">Gaspare</cite>
           </div>
           <q class="quote__citation">Unique creations for unique<br>
@@ -103,10 +106,14 @@
     <div class="dishes__wrapper">
       <section class="dishes__item  dishes__item--active">
         <picture>
-          <source media="(min-width: 1260px)" srcset = "img/menu-desktop.png">
-          <source media="(min-width: 960px)" srcset = "img/menu-desktop-small.png">
-          <source media="(min-width: 768px)" srcset = "img/menu_x2.png">
-          <img class="dishes__image" src="img/menu_x1.png"  alt="">
+          <source type="image/webp" media="(min-width: 1260px)" srcset="img/menu_desktop.webp">
+          <source type="image/webp" media="(min-width: 960px)" srcset="img/menu_desktop-small.webp">
+          <source type="image/webp" media="(min-width: 768px)" srcset="img/menu_tablet.webp">
+          <source type="image/webp" srcset="img/menu_mobile.webp">
+          <source media="(min-width: 1260px)" srcset = "img/menu_desktop.png">
+          <source media="(min-width: 960px)" srcset = "img/menu_desktop-small.png">
+          <source media="(min-width: 768px)" srcset = "img/menu_tablet.png">
+          <img class="dishes__image" src="img/menu_mobile.png"  alt="Tasty pancakes">
         </picture>
         <div class="dishes__stars">4</div>
         <div class="dishes__description">
@@ -122,10 +129,14 @@
       </section>
       <section class="dishes__item  dishes__item--hidden">
         <picture>
-          <source media="(min-width: 1260px)" srcset = "img/menu-1-desktop.png">
-          <source media="(min-width: 960px)" srcset = "img/menu-1-desktop-small.png">
-            <source media="(min-width: 768px)" srcset = "img/menu-1_x2.png">
-          <img class="dishes__image" src="img/menu-1_x1.png"  alt="">
+          <source type="image/webp" media="(min-width: 1260px)" srcset="img/menu-1_desktop.webp">
+          <source type="image/webp" media="(min-width: 960px)" srcset="img/menu-1_desktop-small.webp">
+          <source type="image/webp" media="(min-width: 768px)" srcset="img/menu-1_tablet.webp">
+          <source type="image/webp" srcset="img/menu-1_mobile.webp">
+          <source media="(min-width: 1260px)" srcset = "img/menu-1_desktop.png">
+          <source media="(min-width: 960px)" srcset = "img/menu-1_desktop-small.png">
+          <source media="(min-width: 768px)" srcset = "img/menu-1_tablet.png">
+          <img class="dishes__image" src="img/menu-1_mobile.png"  alt="Salami sandwich">
         </picture>
         <div class="dishes__description">
           <h3 class="dishes__title">Salami sandwich</h3>
@@ -140,10 +151,14 @@
       </section>
       <section class="dishes__item  dishes__item--hidden">
         <picture>
-          <source media="(min-width: 1260px)" srcset = "img/menu-2-desktop.png">
-          <source media="(min-width: 960px)" srcset = "img/menu-2-desktop-small.png">
-            <source media="(min-width: 768px)" srcset = "img/menu-2_x2.png">
-          <img class="dishes__image" src="img/menu-2_x1.png"  alt="">
+          <source type="image/webp" media="(min-width: 1260px)" srcset="img/menu-2_desktop.webp">
+          <source type="image/webp" media="(min-width: 960px)" srcset="img/menu-2_desktop-small.webp">
+          <source type="image/webp" media="(min-width: 768px)" srcset="img/menu-2_tablet.webp">
+          <source type="image/webp" srcset="img/menu-2_mobile.webp">
+          <source media="(min-width: 1260px)" srcset = "img/menu-2_desktop.png">
+          <source media="(min-width: 960px)" srcset = "img/menu-2_desktop-small.png">
+          <source media="(min-width: 768px)" srcset = "img/menu-2_tablet.png">
+          <img class="dishes__image" src="img/menu-2_mobile.png"  alt="Berry dessert">
         </picture>
         <div class="dishes__description">
           <h3 class="dishes__title">Berry dessert</h3>
@@ -158,10 +173,14 @@
       </section>
       <section class="dishes__item  dishes__item--hidden">
         <picture>
-          <source media="(min-width: 1260px)" srcset = "img/menu-3-desktop.png">
-          <source media="(min-width: 960px)" srcset = "img/menu-3-desktop-small.png">
-            <source media="(min-width: 768px)" srcset = "img/menu-3_x2.png">
-          <img class="dishes__image" src="img/menu-3_x1.png"  alt="">
+          <source type="image/webp" media="(min-width: 1260px)" srcset="img/menu-3_desktop.webp">
+          <source type="image/webp" media="(min-width: 960px)" srcset="img/menu-3_desktop-small.webp">
+          <source type="image/webp" media="(min-width: 768px)" srcset="img/menu-3_tablet.webp">
+          <source type="image/webp" srcset="img/menu-3_mobile.webp">
+          <source media="(min-width: 1260px)" srcset = "img/menu-3_desktop.png">
+          <source media="(min-width: 960px)" srcset = "img/menu-3_desktop-small.png">
+          <source media="(min-width: 768px)" srcset = "img/menu-3_tablet.png">
+          <img class="dishes__image" src="img/menu-3_mobile.png"  alt="Fresh salad">
         </picture>
         <div class="dishes__description">
           <h3 class="dishes__title">Fresh salad</h3>
@@ -176,10 +195,14 @@
       </section>
       <section class="dishes__item  dishes__item--hidden">
         <picture>
-          <source media="(min-width: 1260px)" srcset = "img/menu-1-desktop.png">
-          <source media="(min-width: 960px)" srcset = "img/menu-1-desktop-small.png">
-            <source media="(min-width: 768px)" srcset = "img/menu-1_x2.png">
-          <img class="dishes__image" src="img/menu-1_x1.png"  alt="">
+          <source type="image/webp" media="(min-width: 1260px)" srcset="img/menu-1_desktop.webp">
+          <source type="image/webp" media="(min-width: 960px)" srcset="img/menu-1_desktop-small.webp">
+          <source type="image/webp" media="(min-width: 768px)" srcset="img/menu-1_tablet.webp">
+          <source type="image/webp" srcset="img/menu-1_mobile.webp">
+          <source media="(min-width: 1260px)" srcset = "img/menu-1_desktop.png">
+          <source media="(min-width: 960px)" srcset = "img/menu-1_desktop-small.png">
+          <source media="(min-width: 768px)" srcset = "img/menu-1_tablet.png">
+          <img class="dishes__image" src="img/menu-1_mobile.png"  alt="Salami sandwich">
         </picture>
         <div class="dishes__description">
           <h3 class="dishes__title">Salami sandwich</h3>
@@ -194,10 +217,14 @@
       </section>
       <section class="dishes__item  dishes__item--hidden">
         <picture>
-          <source media="(min-width: 1260px)" srcset = "img/menu-2-desktop.png">
-          <source media="(min-width: 960px)" srcset = "img/menu-2-desktop-small.png">
-            <source media="(min-width: 768px)" srcset = "img/menu-2_x2.png">
-          <img class="dishes__image" src="img/menu-2_x1.png"  alt="">
+          <source type="image/webp" media="(min-width: 1260px)" srcset="img/menu-2_desktop.webp">
+          <source type="image/webp" media="(min-width: 960px)" srcset="img/menu-2_desktop-small.webp">
+          <source type="image/webp" media="(min-width: 768px)" srcset="img/menu-2_tablet.webp">
+          <source type="image/webp" srcset="img/menu-2_mobile.webp">
+          <source media="(min-width: 1260px)" srcset = "img/menu-2_desktop.png">
+          <source media="(min-width: 960px)" srcset = "img/menu-2_desktop-small.png">
+          <source media="(min-width: 768px)" srcset = "img/menu-2_tablet.png">
+          <img class="dishes__image" src="img/menu-2_mobile.png"  alt="Berry dessert">
         </picture>
         <div class="dishes__description">
           <h3 class="dishes__title">Berry dessert</h3>
@@ -216,22 +243,40 @@
         <div class="tabs__wrapper">
           <ul class="tabs__list">
             <li class="tabs__item  tabs__item--active">
-              <img class="tabs__image" src="img/slider.png" alt="" width="90" height="90">
+              <picture>
+                <source type="image/webp" srcset="img/slider.webp">
+                <img class="tabs__image" src="img/slider.png" alt="icon dish-1" width="90" height="90">
+              </picture>
             </li>
             <li class="tabs__item">
-              <img class="tabs__image" src="img/slider_1.png" alt="" width="90" height="90">
+              <picture>
+                <source type="image/webp" srcset="img/slider_1.webp">
+                <img class="tabs__image" src="img/slider_1.png" alt="icon dish-2" width="90" height="90">
+              </picture>
             </li>
             <li class="tabs__item">
-              <img class="tabs__image" src="img/slider_2.png" alt="" width="90" height="90">
+              <picture>
+                <source type="image/webp" srcset="img/slider_2.webp">
+                <img class="tabs__image" src="img/slider_2.png" alt="icon dish-3" width="90" height="90">
+              </picture>
             </li>
             <li class="tabs__item">
-              <img class="tabs__image" src="img/slider_3.png" alt="" width="90" height="90">
+              <picture>
+                <source type="image/webp" srcset="img/slider_3.webp">
+                <img class="tabs__image" src="img/slider_3.png" alt="icon dish-4" width="90" height="90">
+              </picture>
             </li>
             <li class="tabs__item">
-              <img class="tabs__image" src="img/slider_1.png" alt="" width="90" height="90">
+              <picture>
+                <source type="image/webp" srcset="img/slider_1.webp">
+                <img class="tabs__image" src="img/slider_1.png" alt="icon dish-5" width="90" height="90">
+              </picture>
             </li>
             <li class="tabs__item">
-              <img class="tabs__image" src="img/slider_2.png" alt="" width="90" height="90">
+              <picture>
+                <source type="image/webp" srcset="img/slider_2.webp">
+                <img class="tabs__image" src="img/slider_2.png" alt="icon dish-6" width="90" height="90">
+              </picture>
             </li>
           </ul>
         </div>
@@ -314,17 +359,26 @@
         <div class="best__ingredients">
           <ul class="best__list">
             <li class="best__item">
-              <img class="best__item-icon" src="img/ingredients_1.png" width="100" height="100" alt="">
+              <picture>
+                <source type="image/webp" srcset="img/ingredients_1.webp">
+                <img class="best__item-icon" src="img/ingredients_1.png" width="100" height="100" alt="icon 1">
+              </picture>
               <h3 class="best__item-title">Class aptent</h3>
               <p class="best__item-text">Quot alienum persecuti ut eam, nam ad atqui primis nusquam.</p>
             </li>
             <li class="best__item">
-              <img class="best__item-icon" src="img/ingredients_2.png" width="100" height="100" alt="">
+              <picture>
+                <source type="image/webp" srcset="img/ingredients_2.webp">
+                <img class="best__item-icon" src="img/ingredients_2.png" width="100" height="100" alt="icon 2">
+              </picture>
               <h3 class="best__item-title">Nulla eget</h3>
               <p class="best__item-text">Nullam dictum felis eu pede mollis pretium Integer tincidunt.</p>
             </li>
             <li class="best__item">
-              <img class="best__item-icon" src="img/ingredients_3.png" width="100" height="100" alt="">
+              <picture>
+                <source type="image/webp" srcset="img/ingredients_3.webp">
+                <img class="best__item-icon" src="img/ingredients_3.png" width="100" height="100" alt="icon 3">
+              </picture>
               <h3 class="best__item-title">Sed nibh purus</h3>
               <p class="best__item-text"> Aenean eleifend tellus leo ligula, porttitor eu, consequat vitae.</p>
             </li>
