--- a/index.html
+++ b/index.html
@@ -138,6 +138,7 @@
           <source media="(min-width: 768px)" srcset = "img/menu-1_tablet.png">
           <img class="dishes__image" src="img/menu-1_mobile.png"  alt="Salami sandwich">
         </picture>
+        <div class="dishes__stars">4</div>
         <div class="dishes__description">
           <h3 class="dishes__title">Salami sandwich</h3>
           <b class="dishes__subtitle">the most popular</b>
@@ -160,6 +161,7 @@
           <source media="(min-width: 768px)" srcset = "img/menu-2_tablet.png">
           <img class="dishes__image" src="img/menu-2_mobile.png"  alt="Berry dessert">
         </picture>
+        <div class="dishes__stars">5</div>
         <div class="dishes__description">
           <h3 class="dishes__title">Berry dessert</h3>
           <b class="dishes__subtitle">summer choice</b>
@@ -182,6 +184,7 @@
           <source media="(min-width: 768px)" srcset = "img/menu-3_tablet.png">
           <img class="dishes__image" src="img/menu-3_mobile.png"  alt="Fresh salad">
         </picture>
+        <div class="dishes__stars">4</div>
         <div class="dishes__description">
           <h3 class="dishes__title">Fresh salad</h3>
           <b class="dishes__subtitle">the most useful</b>
@@ -204,6 +207,7 @@
           <source media="(min-width: 768px)" srcset = "img/menu-1_tablet.png">
           <img class="dishes__image" src="img/menu-1_mobile.png"  alt="Salami sandwich">
         </picture>
+        <div class="dishes__stars">4</div>
         <div class="dishes__description">
           <h3 class="dishes__title">Salami sandwich</h3>
           <b class="dishes__subtitle">the most popular</b>
@@ -226,6 +230,7 @@
           <source media="(min-width: 768px)" srcset = "img/menu-2_tablet.png">
           <img class="dishes__image" src="img/menu-2_mobile.png"  alt="Berry dessert">
         </picture>
+        <div class="dishes__stars">4</div>
         <div class="dishes__description">
           <h3 class="dishes__title">Berry dessert</h3>
           <b class="dishes__subtitle">summer choice</b>
