--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="no-js">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="css/style.css">
   <script src="js/picturefill.min.js"></script>
+  <script src="js/modernizr-custom.js"></script>
   <link rel="icon" type="image/png" href="img/favicon.png"/>
   <title>Gustoso</title>
 </head>
